# SpatiumGL

./: .clang-format  .gitignore  .travis.yml  Animator_8hpp.html  Animator_8hpp__dep__incl.map  Animator_8hpp__dep__incl.md5  Animator_8hpp__incl.map  Animator_8hpp__incl.md5  Animator_8hpp_source.html  Bounds_8hpp.html  Bounds_8hpp__dep__incl.map  Bounds_8hpp__dep__incl.md5  Bounds_8hpp__incl.map  Bounds_8hpp__incl.md5  Bounds_8hpp_source.html  CMakeLists.txt  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8hpp.html  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  Doxyfile  Geometry_8hpp.html  Geometry_8hpp__incl.map  Geometry_8hpp__incl.md5  Geometry_8hpp_source.html  GlfwRenderWindowImpl_8cpp.html  GlfwRenderWindowImpl_8cpp__incl.map  GlfwRenderWindowImpl_8cpp__incl.md5  GlfwRenderWindowImpl_8hpp.html  GlfwRenderWindowImpl_8hpp__dep__incl.map  GlfwRenderWindowImpl_8hpp__dep__incl.md5  GlfwRenderWindowImpl_8hpp__incl.map  GlfwRenderWindowImpl_8hpp__incl.md5  GlfwRenderWindowImpl_8hpp_source.html  GlfwRenderWindow_8cpp.html  (+893 more)
apps/: CMakeLists.txt
apps/hello/: CMakeLists.txt  hello.cpp
apps/lasgrid/: CMakeLists.txt  lasgrid.cpp
apps/lasinfo/: CMakeLists.txt  lasinfo.cpp
apps/lasoctree/: CMakeLists.txt  LasOctant.hpp  LasOctree.hpp  lasoctree.cpp
apps/lasoctreeviewer/: CMakeLists.txt  lasoctreeviewer.cpp
apps/lasviewer/: CMakeLists.txt  lasviewer.cpp
apps/pcgridsampler/: CMakeLists.txt
apps/pcinfo/: CMakeLists.txt  main.cpp  pcinfo.cpp
apps/pcviewer/: CMakeLists.txt  main.cpp  pcviewer.cpp
cmake/: SpatiumGLConfig.cmake.in
cmake/glfw/: CMakeLists.txt  CMakeLists.txt.in
cpp/examples/: CMakeLists.txt  pdalreader.cpp
spatiumgl/: CMakeLists.txt  spatiumgl.cpp
spatiumgl/common/: CMakeLists.txt
spatiumgl/common/include/: spatiumglexport.hpp
spatiumgl/common/include/spatiumgl/: Image.hpp  Matrix.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Vector.hpp  Vector2.hpp
spatiumgl/common/test/: CMakeLists.txt  test_Matrix.cpp  test_Vector.cpp  test_Vector2.cpp  test_Vector3.cpp
spatiumgl/core/: CMakeLists.txt
spatiumgl/core/include/: spatiumglexport.hpp
spatiumgl/core/include/spatiumgl/: AsyncTask.hpp  AsyncTaskProgress.hpp  Bounds.hpp  Color.hpp  Image.hpp  Math.hpp  Matrix.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Pixmap.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
spatiumgl/core/src/: Pixmap.cpp
spatiumgl/core/test/: CMakeLists.txt  test_AsyncTask.cpp  test_Bounds.cpp  test_Color.cpp  test_Matrix.cpp  test_Matrix2.cpp  test_Matrix3.cpp  test_Matrix4.cpp  test_System.cpp  test_Vector.cpp  test_Vector2.cpp  test_Vector3.cpp  test_Vector4.cpp
spatiumgl/doc/: building_pdal.md
spatiumgl/gfx3d/: CMakeLists.txt
spatiumgl/gfx3d/include/spatiumgl/gfx3d/: Animator.hpp  Camera.hpp  Geometry.hpp  Grid.hpp  LineMesh.hpp  Material.hpp  Mesh.hpp  OctreeObject.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  PivotInteractor.hpp  PlaneInteractor.hpp  PointCloud.hpp  PointCloudObject.hpp  RenderObject.hpp  RenderWindow.hpp  RenderWindowInteractor.hpp  Renderer.hpp  Scalars.hpp  SceneObject.hpp  Texture.hpp  Transform.hpp  TransformAnimator.hpp
spatiumgl/gfx3d/src/gfx3d/: Camera.cpp  Grid.cpp  LineMesh.cpp  Mesh.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PivotInteractor.cpp  PlaneInteractor.cpp  PointCloud.cpp  RenderObject.cpp  RenderWindow.cpp  SceneObject.cpp  Transform.cpp  TransformAnimator.cpp
spatiumgl/gfx3d/test/: CMakeLists.txt  test_Camera.cpp  test_PointCloud.cpp  test_Projection.cpp  test_Transform.cpp
spatiumgl/gfx3d_las/src/gfx3d/io/: LasReader.cpp
spatiumgl/gfx3d_opengl/: CMakeLists.txt
spatiumgl/gfx3d_opengl/include/spatiumgl/gfx3d/: GlfwRenderWindow.hpp  OGLGridRenderer.hpp  OGLLineMeshRenderer.hpp  OGLMeshRenderer.hpp  OGLOctreeRenderer.hpp  OGLPointCloudRenderer.hpp  OGLRenderer.hpp  OGLShader.hpp  OGLShaderProgram.hpp  OGLTexture.hpp  OGLTriangleRenderer.hpp
spatiumgl/gfx3d_opengl/src/gfx3d/: GlfwRenderWindow.cpp  GlfwRenderWindowImpl.cpp  GlfwRenderWindowImpl.hpp  OGLGridRenderer.cpp  OGLLineMeshRenderer.cpp  OGLLineMeshShaders.hpp  OGLMeshRenderer.cpp  OGLOctreeRenderer.cpp  OGLOctreeShaders.hpp  OGLPointCloudRenderer.cpp  OGLPointCloudShaders.hpp  OGLShaderProgram.cpp  OGLTriangleRenderer.cpp
spatiumgl/gfx3d_opengl/test/: CMakeLists.txt  test_PointCloudRenderer.cpp  test_Renderers.cpp
spatiumgl/idx/: CMakeLists.txt
spatiumgl/idx/include/spatiumgl/idx/: NTree.hpp  NTreeNode.hpp  Octree.hpp
spatiumgl/idx/src/: Octree.cpp
spatiumgl/idx/test/: CMakeLists.txt  test_Tree.cpp
spatiumgl/include/spatiumgl/: Bounds.hpp  Camera.hpp  Geometry.hpp  GlfwRenderWindow.hpp  Material.hpp  Matrix.hpp  Mesh.hpp  Octree.hpp  OctreeNode.hpp  PivotInteractor.hpp  PointCloud.hpp  PointCloudRenderer.hpp  RenderObject.hpp  RenderWindow.hpp  RenderWindowInteractor.hpp  Renderer.hpp  SceneObject.hpp  Shader.hpp  ShaderProgram.hpp  Transform.hpp  Tree.hpp  TreeNode.hpp  Vector.hpp
spatiumgl/include/spatiumgl/io/: MeshIO.hpp  PointCloudFileStream.hpp  PointCloudReader.hpp
spatiumgl/io_las/: CMakeLists.txt
spatiumgl/io_las/include/spatiumgl/gfx3d/io/: LasReader.hpp
spatiumgl/io_las/include/spatiumgl/io/: LasHeader.hpp  LasPoint.hpp  LasPointStatistics.hpp  LasReadTask.hpp  LasReader.hpp  LasScalars.hpp  LasUtils.hpp  LasWriter.hpp
spatiumgl/io_las/src/io/: LasPointStatistics.cpp  LasReadTask.cpp  LasReadTaskImpl .cpp  LasReadTaskImpl.hpp  LasReader.cpp  LasReaderImpl.cpp  LasReaderImpl.hpp  LasWriter.cpp  LasWriterImpl.cpp  LasWriterImpl.hpp
spatiumgl/io_las/test/: CMakeLists.txt  test_LasIO.cpp  test_LasReader.cpp
spatiumgl/src/: Camera.cpp  GlfwRenderWindow.cpp  Mesh.cpp  PivotInteractor.cpp  PointCloud.cpp  PointCloudRenderer.cpp  RenderObject.cpp  SceneObject.cpp  Transform.cpp
spatiumgl/src/io/: PointCloudReader.cpp
spatiumgl/test/: CMakeLists.txt  test_Matrix.cpp  test_Vector.cpp
tools/: CMakeLists.txt
tools/Downsampler/: downsampler.cpp
tools/PointCloudViewer/: CMakeLists.txt  main.cpp
(+86 files in other folders)
